chore: update code snippets

--- a/docs/developer-docs/5.37.x/enterprise/cognito-federation.mdx
+++ b/docs/developer-docs/5.37.x/enterprise/cognito-federation.mdx
@@ -10,7 +10,7 @@ import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 import cognitoGoogle from "./assets/cognito-google.png";
 import cognitoOutput from "./assets/core-output.png";
 
-<CanIUseThis since={"5.37.6"} />
+<CanIUseThis since={"5.37.6"} enterprise={true} />
 
 <WhatYouWillLearn>
 
